k8s/staging/deployment_staging.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-service-staging
  namespace: section-31-staging
  labels:
    app: document-service-staging
  annotations:
    prometheus.io/scrape: "true"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: document-service-staging
      serve: 'yes'
  template:
    metadata:
      labels:
        app: document-service-staging
        track: stable
        serve: 'yes'
      annotations:
        logging.meltwater.io/system: "section-31-staging"
        logging.meltwater.io/service: "document-service-staging" 
        logging.meltwater.io/environment: "staging"
        logging.meltwater.io/type: "nested_json"
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      containers:
        - name: document-service-staging
          image: 576727886658.dkr.ecr.eu-west-1.amazonaws.com/document-service:${VERSION}
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 128m
              memory: 256Mi
          ports:
            - containerPort: 80
      dnsConfig:
        options:
          - name: ndots
            value: "1"
