k8s/staging/document_api_service_staging.yml
apiVersion: v1
kind: Service
metadata:
  name: document-service-staging
  namespace: section-31-staging
  labels:
    app: document-service-staging
spec:
  selector:
    app: document-service-staging
    serve: "yes"
  ports:
  - port: 80
    targetPort: 80
